--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,7 @@
   <form accept-charset="UTF-8">
     <div class="grid">
 
-      <!--  Initialization with default options -->
+      <!--  Init with default options -->
       <div class="column">
         <h4>Fruits:</h4>
 
@@ -43,7 +43,7 @@
         </div>
       </div>
 
-      <!--  Initialization with a custom selector -->
+      <!--  Init with a custom selector -->
       <div class="column">
         <h4>Animals:</h4>
 
@@ -89,11 +89,11 @@
       size: '30px',
       border: '1px solid #EA8100',
       borderChecked: '1px solid #EA8100',
-      paddedSpace: '6px',
-      color: 'rgba(234,223,210, 0.5)',
+      paddedSpace: '2px',
+      color: 'rgba(234, 223, 210, 0.5)',
       colorChecked: '#ea8100',
       labelSpace: '0.4rem',
-      shadow: 'none',
+      shadow: '0 0 2px rgba(0, 0, 0, 0.6)',
     });
 
   </script>
